--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "morgan": "^1.10.0",
     "mssql": "^11.0.1",
+    "rotating-file-stream": "^3.2.6",
     "session-file-store": "^1.5.0"
   }
 }
