--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ dist
 .pnp.*
 data/config.json
 data/config.json.bak
+data/badgeSpotlight.json
 data/news.json
 data/manifest-config.json
 public/game/*
