--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express-session": "^1.18.1",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.2",
     "rotating-file-stream": "^3.2.6",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "sharp": "^0.34.1"
   }
 }
