--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,25 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # required for pushing
+          fetch-depth: 0  # required for tags and pushing
 
       - name: Extract version from tag
         id: version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+
+      - name: Get previous tag
+        id: prev
+        run: |
+          PREV=$(git describe --tags --abbrev=0 HEAD^)
+          echo "previous_tag=$PREV" >> $GITHUB_OUTPUT
+
+      - name: Generate changelog
+        id: changelog
+        run: |
+          LOG=$(git log ${{ steps.prev.outputs.previous_tag }}..HEAD --pretty=format:"- %s")
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          echo "$LOG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Update version.json in main
         run: |
@@ -37,16 +51,19 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/cityvault-${VERSION}.zip
+          name: CityVault v${{ env.VERSION }}
+          body: ${{ steps.changelog.outputs.changelog }}
+          tag_name: v${{ env.VERSION }}
 
       - name: Update update.json in gh-pages
         run: |
           git fetch origin gh-pages
-          git checkout gh-pages
+          git switch gh-pages
 
           echo '{
             "latest": "'${VERSION}'",
-            "url": "https://github.com/${{ github.repository }}/releases/download/v${VERSION}/cityvault-${VERSION}.zip",
-            "notes": "See https://github.com/${{ github.repository }}/releases/tag/v${VERSION}"
+            "url": "https://github.com/${{ github.repository }}/releases/download/v'${VERSION}'/cityvault-'${VERSION}'.zip",
+            "notes": "See https://github.com/${{ github.repository }}/releases/tag/v'${VERSION}'"
           }' > update.json
 
           git add update.json
