--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           git config user.email "github-actions@users.noreply.github.com"
           git add data/version.json
           git commit -m "Update version.json to ${VERSION}" || echo "No changes"
-          git push
+          git push origin HEAD:main
 
       - name: Create ZIP artifact
         run: |
