--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "inquirer": "^12.6.1",
+    "mailersend": "^2.5.0",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
