--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "rotating-file-stream": "^3.2.6",
     "session-file-store": "^1.5.0",
     "sharp": "^0.34.1",
