--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,17 +43,20 @@ jobs:
 
       - name: Update version.json in main
         run: |
-          echo "{ \"version\": \"${VERSION}\" }" > data/version.json
+          echo "{ \"version\": \"${{ env.VERSION }}\" }" > data/version.json
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add data/version.json
-          git commit -m "Update version.json to ${VERSION}" || echo "No changes"
+          git commit -m "Update version.json to ${{ env.VERSION }}" || echo "No changes"
           git push origin HEAD:main
 
       - name: Create ZIP artifact
         run: |
           mkdir dist
-          zip -r "dist/cityvault-${VERSION}.zip" . -x "*.git*" "node_modules/*"
+          zip -r "dist/cityvault-${{ env.VERSION }}.zip" . -x "*.git*" "node_modules/*"
+
+      - name: Debug ZIP output
+        run: ls -lh dist/
 
       - name: Upload Release ZIP
         uses: softprops/action-gh-release@v1
@@ -69,11 +72,11 @@ jobs:
           git switch gh-pages
 
           echo '{
-            "latest": "'${VERSION}'",
-            "url": "https://github.com/${{ github.repository }}/releases/download/v'${VERSION}'/cityvault-'${VERSION}'.zip",
-            "notes": "See https://github.com/${{ github.repository }}/releases/tag/v'${VERSION}'"
+            "latest": "${{ env.VERSION }}",
+            "url": "https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}/cityvault-${{ env.VERSION }}.zip",
+            "notes": "See https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
           }' > update.json
 
           git add update.json
-          git commit -m "Update update.json for v${VERSION}" || echo "No changes"
+          git commit -m "Update update.json for v${{ env.VERSION }}" || echo "No changes"
           git push origin gh-pages
