--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "follow-redirects": "^1.15.9",
     "inquirer": "^12.6.1",
     "mailersend": "^2.5.0",
     "morgan": "^1.10.0",
