--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,20 +3,23 @@ name: Release CityVault
 on:
   push:
     tags:
-      - 'v*'  # e.g. v0.1.3
+      - 'v*'
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build-release:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # required for full history and tags
+          ref: main
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Extract version from tag
         id: version
@@ -34,12 +37,15 @@ jobs:
           if [ -z "${{ steps.prev.outputs.previous_tag }}" ]; then
             RANGE=""
           else
-            RANGE="${{ steps.prev.outputs.previous_tag }}..HEAD"
+            RANGE="${{ steps.prev.outputs.previous_tag }}..${{ github.ref_name }}"
           fi
-
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
           git log $RANGE --pretty=format:"- %s" | grep -vE '^(Merge branch|Update version\.json)' >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Write version.json for ZIP
+        run: |
+          echo '{ "version": "${{ env.VERSION }}" }' > version.json
 
       - name: Create ZIP artifact
         run: |
@@ -60,14 +66,17 @@ jobs:
       - name: Update update.json in gh-pages
         run: |
           git fetch origin gh-pages
-          git switch gh-pages
-
+          git checkout gh-pages
           echo '{
             "latest": "${{ env.VERSION }}",
             "url": "https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}/cityvault-${{ env.VERSION }}.zip",
             "notes": "See https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
           }' > update.json
-
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
           git add update.json
           git commit -m "Update update.json for v${{ env.VERSION }}" || echo "No changes"
           git push origin gh-pages
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
