--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
             RANGE="${{ steps.prev.outputs.previous_tag }}..${{ github.ref_name }}"
           fi
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          git log $RANGE --pretty=format:"- %s" | grep -vE '^(Merge branch|Update version\.json)' >> $GITHUB_OUTPUT
+          git log $RANGE --pretty=format:"- %s" | grep -vEi 'update.*version\\.json|bump.*version\\.json|version\\.json' >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Write version.json for ZIP
