--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rotating-file-stream": "^3.2.6",
     "session-file-store": "^1.5.0",
     "sharp": "^0.34.1",
+    "tga2png": "^0.1.3",
     "unzipper": "^0.12.3"
   }
 }
