Move sessions to SQLite.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "@small-tech/auto-encrypt": "^4.3.0",
+    "better-sqlite3": "^11.10.0",
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "connect-flash": "^0.1.1",
+    "connect-sqlite3": "^0.9.15",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
