--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "inquirer": "^12.6.1",
     "mailersend": "^2.5.0",
     "morgan": "^1.10.0",
+    "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
