--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rotating-file-stream": "^3.2.6",
     "session-file-store": "^1.5.0",
     "sharp": "^0.34.1",
+    "tar": "^7.4.3",
     "tga2png": "^0.1.3"
   }
 }
