--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -2,8 +2,10 @@ name: Build Electron Launcher
 
 on:
   push:
+    branches:
+      - dev
     tags:
-      - 'v*'  # Trigger only on version tags
+      - 'v*'
 
 jobs:
   build:
@@ -54,13 +56,6 @@ jobs:
             --ignore="^/node_modules/(electron|.*-dev).*" \
             --ignore="^/config"
 
-      - name: Upload app.asar
-        uses: softprops/action-gh-release@v1
-        with:
-          files: launcher/cityvault-launcher-*/resources/app.asar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Archive build (Windows)
         if: matrix.os == 'windows-latest'
         run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath cityvault-launcher-win.zip
@@ -69,11 +64,34 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
 
-      - name: Upload zipped build
+      - name: Upload zipped build to GitHub Release (only for tag)
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: |
             launcher/cityvault-launcher-win.zip
             launcher/cityvault-launcher-linux.tar.gz
+            launcher/cityvault-launcher-*/resources/app.asar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Prepare launcher version JSON
+        run: |
+          mkdir -p launcher_version_tmp
+          if [[ "${GITHUB_REF}" == "refs/heads/dev" ]]; then
+            echo "{ \"version\": \"dev-${{ github.run_number }}\" }" > launcher_version_tmp/dev-launcher-version.json
+          elif [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            VERSION="${GITHUB_REF#refs/tags/v}"
+            echo "{ \"version\": \"$VERSION\" }" > launcher_version_tmp/launcher-version.json
+          fi
+
+      - name: Commit version JSON to gh-pages
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+          git fetch origin gh-pages
+          git checkout gh-pages
+          cp -r ../launcher_version_tmp/* .
+          git add *.json
+          git commit -m "Update launcher version JSON from $GITHUB_REF" || echo "No changes"
+          git push origin gh-pages
