--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -28,13 +28,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies (Linux)
-        if: runner.os != 'Windows'
+      - name: Install dependencies
         run: npm ci
-
-      - name: Install dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: npm install --force
 
       - name: Determine platform
         id: platform
@@ -48,35 +43,41 @@ jobs:
 
       - name: Package launcher
         run: |
-          npx electron-packager . cityvault-launcher `
-            --platform=${{ steps.platform.outputs.platform }} `
-            --arch=${{ matrix.arch }} `
-            --icon=icon.ico `
-            --overwrite `
-            --asar.unpack=config.json `
-            --ignore="^/tests" `
-            --ignore="^/docs" `
-            --ignore=".*\\.map" `
-            --ignore=".*\\.md" `
-            --ignore="^/node_modules/(electron|.*-dev).*" `
+          npx --yes @electron/packager . cityvault-launcher \
+            --platform=${{ steps.platform.outputs.platform }} \
+            --arch=${{ matrix.arch }} \
+            --icon=icon.ico \
+            --overwrite \
+            --asar.unpack=config.json \
+            --ignore="^/tests" \
+            --ignore="^/docs" \
+            --ignore=".*\\.map" \
+            --ignore=".*\\.md" \
+            --ignore="^/node_modules/(electron|.*-dev).*" \
             --ignore="^/config"
-        shell: pwsh
+        shell: bash
 
       - name: Archive build (Windows)
         if: matrix.os == 'windows-latest'
-        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath cityvault-launcher-win.zip
+        run: |
+          $zipName = "cityvault-launcher-win-${{ github.ref_type == 'tag' && github.ref_name || 'dev-' + $env:GITHUB_RUN_NUMBER }}.zip"
+          Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath $zipName
+        shell: pwsh
 
       - name: Archive build (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
+        run: |
+          ls -lah
+          TAR_NAME="cityvault-launcher-linux-${{ github.ref_type == 'tag' && github.ref_name || 'dev-' }}${{ github.run_number }}.tar.gz"
+          tar -czf "$TAR_NAME" cityvault-launcher-linux-${{ matrix.arch }}
 
       - name: Upload zipped build to GitHub Release (only for tag)
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            launcher/cityvault-launcher-win.zip
-            launcher/cityvault-launcher-linux.tar.gz
+            launcher/cityvault-launcher-win-*.zip
+            launcher/cityvault-launcher-linux-*.tar.gz
             launcher/cityvault-launcher-*/resources/app.asar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -97,11 +98,8 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git fetch origin gh-pages
-          git checkout gh-pages
+          git switch gh-pages
           cp -r ../launcher_version_tmp/* .
           git add *.json
           git commit -m "Update launcher version JSON from $GITHUB_REF" || echo "No changes"
           git push origin gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
