--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -41,19 +41,21 @@ jobs:
           fi
         shell: bash
 
-      - name: Determine version string
+      - name: Extract version
         id: version
         run: |
-          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "value=${GITHUB_REF#refs/tags/v}" >> "$GITHUB_OUTPUT"
+          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            echo "value=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
           else
-            echo "value=dev-${{ github.run_number }}" >> "$GITHUB_OUTPUT"
+            echo "value=dev-${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
           fi
         shell: bash
+        env:
+          GITHUB_REF_TYPE: ${{ github.ref_type }}
 
       - name: Package launcher
         run: |
-          npx --yes @electron/packager . cityvault-launcher \
+          npx electron-packager . cityvault-launcher \
             --platform=${{ steps.platform.outputs.platform }} \
             --arch=${{ matrix.arch }} \
             --icon=icon.ico \
@@ -69,24 +71,21 @@ jobs:
 
       - name: Archive build (Windows)
         if: matrix.os == 'windows-latest'
-        run: |
-          $zipName = "cityvault-launcher-win-${{ steps.version.outputs.value }}.zip"
-          Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath $zipName
+        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath cityvault-launcher-win.zip
         shell: pwsh
 
       - name: Archive build (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: |
-          TAR_NAME="cityvault-launcher-linux-${{ steps.version.outputs.value }}.tar.gz"
-          tar -czf "$TAR_NAME" cityvault-launcher-linux-${{ matrix.arch }}
+        run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
+        shell: bash
 
       - name: Upload zipped build to GitHub Release (only for tag)
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            launcher/cityvault-launcher-win-*.zip
-            launcher/cityvault-launcher-linux-*.tar.gz
+            launcher/cityvault-launcher-win.zip
+            launcher/cityvault-launcher-linux.tar.gz
             launcher/cityvault-launcher-*/resources/app.asar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -94,16 +93,24 @@ jobs:
       - name: Prepare launcher version JSON
         run: |
           mkdir -p launcher_version_tmp
-          echo "{ \"version\": \"${{ steps.version.outputs.value }}\" }" > launcher_version_tmp/${{ github.ref_type == 'tag' && 'launcher-version.json' || 'dev-launcher-version.json' }}
+          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            echo "{ \"version\": \"${{ steps.version.outputs.value }}\" }" > launcher_version_tmp/launcher-version.json
+          else
+            echo "{ \"version\": \"${{ steps.version.outputs.value }}\" }" > launcher_version_tmp/dev-launcher-version.json
+          fi
         shell: bash
+        env:
+          GITHUB_REF_TYPE: ${{ github.ref_type }}
 
       - name: Commit version JSON to gh-pages
+        if: matrix.os == 'ubuntu-latest' # Only do this once
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git fetch origin gh-pages
-          git switch gh-pages
+          git checkout gh-pages
           cp -r ../launcher_version_tmp/* .
           git add *.json
           git commit -m "Update launcher version JSON from $GITHUB_REF" || echo "No changes"
           git push origin gh-pages
+        shell: bash
