--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -78,25 +78,19 @@ jobs:
 
       - name: Prepare launcher version JSON
         run: |
-          mkdir -p "$GITHUB_WORKSPACE/launcher_version_tmp"
-          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+          mkdir -p launcher_version_tmp
+          if [[ "${GITHUB_REF}" == "refs/heads/dev" ]]; then
+            echo "{ \"version\": \"dev-${{ github.run_number }}\" }" > launcher_version_tmp/dev-launcher-version.json
+          elif [[ "${GITHUB_REF}" == refs/tags/* ]]; then
             VERSION="${GITHUB_REF#refs/tags/v}"
-            echo "{ \"version\": \"$VERSION\" }" > "$GITHUB_WORKSPACE/launcher_version_tmp/launcher-version.json"
-          else
-            echo "{ \"version\": \"dev-${{ github.run_number }}\" }" > "$GITHUB_WORKSPACE/launcher_version_tmp/dev-launcher-version.json"
+            echo "{ \"version\": \"$VERSION\" }" > launcher_version_tmp/launcher-version.json
           fi
-        shell: bash
-        env:
-          GITHUB_REF_TYPE: ${{ github.ref_type }}
 
-      - name: Commit version JSON to gh-pages
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git fetch origin gh-pages
-          git checkout gh-pages
-          cp -r "$GITHUB_WORKSPACE/launcher_version_tmp/"* .
-          git add *.json
-          git commit -m "Update launcher version JSON from $GITHUB_REF" || echo "No changes"
-          git push https://x-access-token:${{ secrets.PAGES_PUSH_TOKEN }}@github.com/${{ github.repository }} gh-pages
-
+      - name: Publish JSON to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./launcher_version_tmp
+          destination_dir: launcher
+          keep_files: true
+          commit_message: "Update launcher version JSON from ${{ github.ref }}"
