--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -50,20 +50,20 @@ jobs:
 
       - name: Package launcher (Windows)
         if: matrix.os == 'windows-latest'
-        run: >
-          npx electron-packager . cityvault-launcher
-          --platform=win32
-          --arch=${{ matrix.arch }}
-          --icon=icon.ico
-          --overwrite
-          --asar.unpack=config.json
-          --ignore="^/tests"
-          --ignore="^/docs"
-          --ignore=".*\\.map"
-          --ignore=".*\\.md"
-          --ignore="^/node_modules/(electron|.*-dev).*"
-          --ignore="^/config"
         shell: pwsh
+        run: |
+          npx electron-packager . cityvault-launcher `
+            --platform=win32 `
+            --arch=${{ matrix.arch }} `
+            --icon=icon.ico `
+            --overwrite `
+            --asar.unpack=config.json `
+            --ignore='^/tests' `
+            --ignore='^/docs' `
+            --ignore='.*\\.map' `
+            --ignore='.*\\.md' `
+            --ignore='^/node_modules/(electron|.*-dev).*' `
+            --ignore='^/config'
 
       - name: Archive build (Windows)
         if: matrix.os == 'windows-latest'
