--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -60,12 +60,12 @@ jobs:
             --icon=icon.ico `
             --overwrite `
             --asar.unpack=config.json `
-            --ignore='^/tests' `
-            --ignore='^/docs' `
-            --ignore='.*\\.map' `
-            --ignore='.*\\.md' `
-            --ignore='^/node_modules/(electron|.*-dev).*' `
-            --ignore='^/config'
+            "--ignore=^/tests" `
+            "--ignore=^/docs" `
+            "--ignore=.*\\.map" `
+            "--ignore=.*\\.md" `
+            "--ignore=^/node_modules/(electron|.*-dev).*" `
+            "--ignore=^/config"
 
       - name: Verify Linux build exists
         if: matrix.os == 'ubuntu-latest'
