--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -64,7 +64,7 @@ jobs:
           "--ignore=^/docs"
           "--ignore=.*\\.map"
           "--ignore=.*\\.md"
-          "--ignore=^/node_modules/(electron|.*-dev).*"
+          "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
           "--ignore=^/config"
 
       - name: Verify Linux build exists
