--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Package launcher (Windows)
         if: matrix.os == 'windows-latest'
-        shell: pwsh
+        shell: cmd
         run: >
           npx @electron/packager . cityvault-launcher
           --platform=win32
