--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -86,6 +86,20 @@ jobs:
         run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
         shell: bash
 
+      - name: Upload Windows build artifact
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: cityvault-launcher-win
+          path: launcher/cityvault-launcher-win.zip
+
+      - name: Upload Linux build artifact
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: cityvault-launcher-linux
+          path: launcher/cityvault-launcher-linux.tar.gz
+
       - name: Upload zipped build to GitHub Release (only for tag)
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
