--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Archive build (Windows)
         if: matrix.os == 'windows-latest'
-        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }}\* -DestinationPath cityvault-launcher-win.zip
+        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }} -DestinationPath cityvault-launcher-win.zip
         shell: pwsh
 
       - name: Archive build (Linux)
