--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -67,29 +67,29 @@ jobs:
           "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
           "--ignore=^/config"
 
-      - name: Archive build (Windows)
-        if: matrix.os == 'windows-latest'
+      - name: Archive build (Windows) for GitHub Release only
+        if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/')
         run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }} -DestinationPath cityvault-launcher-win.zip
         shell: pwsh
 
-      - name: Archive build (Linux)
-        if: matrix.os == 'ubuntu-latest'
+      - name: Archive build (Linux) for GitHub Release only
+        if: matrix.os == 'ubuntu-latest' && startsWith(github.ref, 'refs/tags/')
         run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
         shell: bash
 
-      - name: Upload Windows build artifact (.zip)
+      - name: Upload Windows build artifact (folder)
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
           name: cityvault-launcher-win
-          path: launcher/cityvault-launcher-win.zip
+          path: launcher/cityvault-launcher-win32-${{ matrix.arch }}
 
-      - name: Upload Linux build artifact (.tar.gz)
+      - name: Upload Linux build artifact (folder)
         if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
           name: cityvault-launcher-linux
-          path: launcher/cityvault-launcher-linux.tar.gz
+          path: launcher/cityvault-launcher-linux-${{ matrix.arch }}
 
       - name: Upload zipped build to GitHub Release (only for tag)
         if: startsWith(github.ref, 'refs/tags/')
